--- a/extra-tests/classes/RollupIntegrationTests.cls
+++ b/extra-tests/classes/RollupIntegrationTests.cls
@@ -372,7 +372,7 @@ private class RollupIntegrationTests {
     jpyOpp.Amount = 100;
     insert new List<Opportunity>{ eurOpp, jpyOpp };
 
-    Rollup.rollupMetadata = new List<Rollup__mdt>{
+    Rollup__mdt meta = Rollup.appendOrderByMetadata(
       new Rollup__mdt(
         RollupFieldOnCalcItem__c = 'Id',
         LookupObject__c = 'Account',
@@ -380,10 +380,11 @@ private class RollupIntegrationTests {
         LookupFieldOnLookupObject__c = 'Id',
         RollupFieldOnLookupObject__c = 'Name',
         RollupOperation__c = 'FIRST',
-        CalcItem__c = 'Opportunity',
-        OrderByFirstLast__c = 'Amount'
-      )
-    };
+        CalcItem__c = 'Opportunity'
+      ),
+      new List<RollupOrderBy__mdt>{ new RollupOrderBy__mdt(FieldName__c = 'Amount') }
+    );
+    Rollup.rollupMetadata = new List<Rollup__mdt>{ meta };
     Rollup.apexContext = TriggerOperation.AFTER_INSERT;
     Rollup.records = new List<Opportunity>{ usdOpp, eurOpp, jpyOpp };
     Rollup.shouldRun = true;
@@ -427,7 +428,7 @@ private class RollupIntegrationTests {
     jpyOpp.Amount = 100;
     insert new List<Opportunity>{ eurOpp, jpyOpp };
 
-    Rollup.rollupMetadata = new List<Rollup__mdt>{
+    Rollup__mdt meta = Rollup.appendOrderByMetadata(
       new Rollup__mdt(
         RollupFieldOnCalcItem__c = 'Id',
         LookupObject__c = 'Account',
@@ -435,10 +436,11 @@ private class RollupIntegrationTests {
         LookupFieldOnLookupObject__c = 'Id',
         RollupFieldOnLookupObject__c = 'Name',
         RollupOperation__c = 'LAST',
-        CalcItem__c = 'Opportunity',
-        OrderByFirstLast__c = 'Amount'
-      )
-    };
+        CalcItem__c = 'Opportunity'
+      ),
+      new List<RollupOrderBy__mdt>{ new RollupOrderBy__mdt(FieldName__c = 'Amount') }
+    );
+    Rollup.rollupMetadata = new List<Rollup__mdt>{ meta };
     Rollup.apexContext = TriggerOperation.AFTER_INSERT;
     Rollup.records = new List<Opportunity>{ usdOpp, eurOpp, jpyOpp };
     Rollup.shouldRun = true;
