Further work on #228 - updated full recalc app to allow for sending CMDT associated with RollupOrderBy__mdt to the backend; the text-based full recalc app now supports a lightning-datatable where order by records can be added.

--- a/rollup/core/classes/RollupFlowFullRecalcDispatcher.cls
+++ b/rollup/core/classes/RollupFlowFullRecalcDispatcher.cls
@@ -25,7 +25,7 @@ global without sharing class RollupFlowFullRecalcDispatcher {
       }
     }
     if (selectedRollupMetadata.isEmpty() == false) {
-      Rollup.performBulkFullRecalc(selectedRollupMetadata, Rollup.InvocationPoint.FROM_SCHEDULED_FLOW.name());
+      Rollup.performBulkFullRecalc(JSON.serialize(selectedRollupMetadata), Rollup.InvocationPoint.FROM_SCHEDULED_FLOW.name());
     }
   }
 }
