Fixing issue raised by @solo-1234 where calc item replacer sometimes incorrectly queried for fields not on the parent object in question

--- a/rollup/core/classes/RollupCalcItemReplacer.cls
+++ b/rollup/core/classes/RollupCalcItemReplacer.cls
@@ -9,13 +9,13 @@ public without sharing class RollupCalcItemReplacer {
   private final RollupControl__mdt control;
   private final Set<Rollup__mdt> processedMetadata;
   private final Map<Rollup__mdt, RollupEvaluator.WhereFieldEvaluator> metaToEval;
-  private final Set<String> queryFields;
+  private final Map<SObjectType, Set<String>> queryFields;
   private final Set<Integer> calcItemHashCodes = new Set<Integer>();
   public RollupCalcItemReplacer(RollupControl__mdt control) {
     this.control = control;
     this.processedMetadata = new Set<Rollup__mdt>();
     this.metaToEval = new Map<Rollup__mdt, RollupEvaluator.WhereFieldEvaluator>();
-    this.queryFields = new Set<String>();
+    this.queryFields = new Map<SObjectType, Set<String>>();
   }
 
   public Boolean hasProcessedMetadata(List<Rollup__mdt> metas, List<SObject> calcItems) {
@@ -58,13 +58,16 @@ public without sharing class RollupCalcItemReplacer {
       Boolean mightNeedReplacement = String.isNotBlank(meta.CalcItemWhereClause__c);
       if (mightNeedReplacement && calcItems?.isEmpty() == false && isPresentInMapAlready == false) {
         localNeedsReplacement = true;
-        RollupEvaluator.WhereFieldEvaluator whereEval = RollupEvaluator.getWhereEval(meta.CalcItemWhereClause__c, calcItems[0].getSObjectType());
+        SObjectType calcType = calcItems[0].getSObjectType();
+        RollupEvaluator.WhereFieldEvaluator whereEval = RollupEvaluator.getWhereEval(meta.CalcItemWhereClause__c, calcType);
         this.metaToEval.put(meta, whereEval);
+        Set<String> queryFields = this.queryFields.containsKey(calcType) ? this.queryFields.get(calcType) : new Set<String>();
         for (String queryField : whereEval.getQueryFields()) {
           if (queryField.contains('.')) {
-            this.queryFields.add(queryField);
+            queryFields.add(queryField);
           }
         }
+        this.queryFields.put(calcType, queryFields);
       } else if (isPresentInMapAlready) {
         localNeedsReplacement = true;
       }
@@ -170,7 +173,8 @@ public without sharing class RollupCalcItemReplacer {
     SObjectType calcItemType = calcItems[0].getSObjectType();
     Map<String, SObjectField> fieldNameToToken = calcItemType.getDescribe().fields.getMap();
     Boolean hasUnqueriedParentFields = false;
-    for (String queryField : this.queryFields) {
+    Set<String> parentQueryFields = this.queryFields.get(calcItemType);
+    for (String queryField : parentQueryFields) {
       String fieldPart = queryField.substringBefore('.');
       String fieldName = this.getFullyQualifiedFieldName(fieldPart);
       if (this.isParentFieldAlreadyPopulated(fieldNameToToken, fieldName, queryField, calcItems[0]) == false) {
@@ -181,7 +185,7 @@ public without sharing class RollupCalcItemReplacer {
 
     if (hasUnqueriedParentFields) {
       List<SObject> objIds = calcItems; // for bind variable
-      String queryString = RollupQueryBuilder.Current.getQuery(calcItemType, new List<String>(this.queryFields), 'Id', '=');
+      String queryString = RollupQueryBuilder.Current.getQuery(calcItemType, new List<String>(parentQueryFields), 'Id', '=');
       RollupLogger.Instance.log('replacing calc items with parent-level where clause using query string:', queryString, LoggingLevel.FINE);
       Map<Id, SObject> idToCalcItemsWithParentFields = new Map<Id, SObject>(Database.query(queryString));
       this.appendUpdatedParentFields(calcItems, idToCalcItemsWithParentFields);
