Finishing (?) work on #228 - updated README documentation, added in support for correctly ordering picklist fields, correctly wired up the base rollup invocable action to support passing a comma-separated list of strings that correspond to RollupOrderBy__mdt records

--- a/extra-tests/classes/RollupCalcItemReplacerTests.cls
+++ b/extra-tests/classes/RollupCalcItemReplacerTests.cls
@@ -83,7 +83,7 @@ private class RollupCalcItemReplacerTests {
     RollupCalcItemReplacer replacer = new RollupCalcItemReplacer(
       new RollupControl__mdt(IsRollupLoggingEnabled__c = true, ReplaceCalcItemsAsyncWhenOverCount__c = 1)
     );
-    List<SObject> replacedOppContactRoles = replacer.replace(
+    replacer.replace(
       new List<OpportunityContactRole>{ oppConRole },
       new List<Rollup__mdt>{ new Rollup__mdt(CalcItemWhereClause__c = 'Opportunity.Amount = 1')}
     );
