--- a/rollup/core/classes/RollupAsyncProcessor.cls
+++ b/rollup/core/classes/RollupAsyncProcessor.cls
@@ -791,8 +791,8 @@ global virtual without sharing class RollupAsyncProcessor extends Rollup impleme
         ? new List<String>()
         : RollupEvaluator.getWhereEval(roll.metadata.CalcItemWhereClause__c, roll.calcItemType).getQueryFields();
       whereFields.addAll(new List<String>{ roll.opFieldOnCalcItem.getDescribe().getName(), roll.lookupFieldOnCalcItem.getDescribe().getName() });
-      if (String.isNotBlank(roll.metadata.OrderByFirstLast__c)) {
-        whereFields.add(roll.metadata.OrderByFirstLast__c);
+      for (RollupOrderBy__mdt orderBy : roll.metadata.RollupOrderBys__r) {
+        whereFields.add(orderBy.FieldName__c);
       }
       if (this.calcObjectToUniqueFieldNames.containsKey(roll.calcItemType)) {
         this.calcObjectToUniqueFieldNames.get(roll.calcItemType).addAll(whereFields);
