Fixing an issue reported by @kd280z where hierarchy/grandparent rollups didn't always play nice together in the event that the ultimate parent lookup field was included in the grandparent relationship field path

--- a/extra-tests/classes/RollupIntegrationTests.cls
+++ b/extra-tests/classes/RollupIntegrationTests.cls
@@ -372,6 +372,7 @@ private class RollupIntegrationTests {
     jpyOpp.Amount = 100;
     insert new List<Opportunity>{ eurOpp, jpyOpp };
 
+    Rollup.onlyUseMockMetadata = true;
     Rollup__mdt meta = Rollup.appendOrderByMetadata(
       new Rollup__mdt(
         RollupFieldOnCalcItem__c = 'Id',
@@ -428,6 +429,7 @@ private class RollupIntegrationTests {
     jpyOpp.Amount = 100;
     insert new List<Opportunity>{ eurOpp, jpyOpp };
 
+    Rollup.onlyUseMockMetadata = true;
     Rollup__mdt meta = Rollup.appendOrderByMetadata(
       new Rollup__mdt(
         RollupFieldOnCalcItem__c = 'Id',
