--- a/rollup/core/classes/Rollup.cls
+++ b/rollup/core/classes/Rollup.cls
@@ -511,8 +511,7 @@ global without sharing virtual class Rollup {
     global Boolean isFullRecordSet;
     @InvocableVariable(label='Is Rollup Started From Parent' description='If the calc records are the parent records, set this to true')
     global Boolean isRollupStartedFromParent = false;
-    // TODO - introduce Apex-defined type for Flow to configure FIRST/LAST properties
-    @InvocableVariable(label='Order By (First/Last) - Deprecated')
+    @InvocableVariable(label='Order By (First/Last)')
     global String orderByFirstLast;
 
     // these are listed with the optional properties because otherwise Flow builders always have to check for null after using a Get Records
