--- a/rollup/core/classes/RollupParentResetProcessor.cls
+++ b/rollup/core/classes/RollupParentResetProcessor.cls
@@ -63,6 +63,9 @@ public inherited sharing class RollupParentResetProcessor extends RollupFullBatc
   }
 
   public override void execute(Database.BatchableContext bc, List<SObject> calcItems) {
+    if (calcItems.isEmpty()) {
+      return;
+    }
     RollupLogger.Instance.log('resetting parent fields for: ' + calcItems.size() + ' items', LoggingLevel.DEBUG);
     for (SObject parentItem : calcItems) {
       for (Rollup__mdt rollupMeta : this.rollupInfo) {
